--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="login_pwd_hint">请输入密码</string>
     <string name="login_register_link">忘记密码？ <a href="#">找回</a></string>
     <string name="login_username_hint">请输入帐号</string>
+    <string name="login_checkbox">记住密码</string>
 </resources>
